# pylibtermkey

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  TODO.md  setup.py
cpp/: CMakeLists.txt
cpp/src/: pylibtermkey_bind.cpp
python/pylibtermkey/: __init__.py  test_pylibtermkey.py
scripts/: before_build.sh  build.sh  deploy.sh  travis_build.sh
